tests/ui/mismatched_types/for-loop-has-unit-body.rs
fn main() {
    for x in 0..3 {
        x //~ ERROR mismatched types
    }
}

// ferrocene-annotations: fls_onfyolkcbeh3
// For Loops
//
// ferrocene-annotations: fls_hndm19t57wby
// Block Expressions
